--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.4.0"
+  },
+  "engines": {
+    "node": "21.3.0"
   }
 }
