Changed json files

--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "vercel": "vercel",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/node": "^2.5.1",
     "bootstrap": "^5.3.2",
     "firebase": "^9.23.0",
     "mongodb": "^6.3.0",
